devopstask-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devopstask
  name: devopstask
  namespace: devopstask
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: devopstask
  type: ClusterIP
