devopstask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopstask
  namespace: devopstask
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: devopstask
            port:
              number: 3000
        path: /
        pathType: Prefix
